@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Added a couple missing locale strings
+    - Fixed an issue where the beacon total would not be shown when editing a beacon
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.11
